--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,22 @@
 {
-    "name": "Team Mendez",
-    "short_name": "Timer",
-    "start_url": "index.html",
-    "display": "standalone",
-    "background_color": "#111111",
-    "theme_color": "#00e5ff",
-    "icons": [
-      {
-        "src": "assets/icon-192.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      },
-      {
-        "src": "assets/icon-512.png",
-        "sizes": "512x512",
-        "type": "image/png"
-      }
-    ]
-  }
+  "name": "Point",
+  "short_name": "Point",
+  "start_url": "./index.html",
+  "display": "standalone",
+  "background_color": "#111",
+  "theme_color": "#111",
+  "orientation": "portrait",
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
+
